style(back): update collection and singleton display names (#1185)
Closes: #1185

--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##cv.responsibilities.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##cv.responsibilities.json
@@ -36,7 +36,7 @@
       },
       "description": {
         "edit": {
-          "label": "description",
+          "label": "Description",
           "description": "",
           "placeholder": "",
           "visible": true,
