--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##general.links.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##general.links.json
@@ -64,8 +64,8 @@
       },
       "cv": {
         "edit": {
-          "label": "cv",
-          "description": "",
+          "label": "CV",
+          "description": "Show on CV page?",
           "placeholder": "",
           "visible": true,
           "editable": true
