--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##cv.cv.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##cv.cv.json
@@ -22,7 +22,7 @@
       },
       "content": {
         "edit": {
-          "label": "content",
+          "label": "Content",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -36,7 +36,7 @@
       },
       "seo": {
         "edit": {
-          "label": "seo",
+          "label": "SEO",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -108,12 +108,6 @@
       }
     },
     "layouts": {
-      "list": [
-        "id",
-        "createdAt",
-        "updatedAt",
-        "content"
-      ],
       "edit": [
         [
           {
@@ -127,6 +121,12 @@
             "size": 12
           }
         ]
+      ],
+      "list": [
+        "id",
+        "createdAt",
+        "updatedAt",
+        "content"
       ]
     }
   },
