--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##general.navigation.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##general.navigation.json
@@ -22,7 +22,7 @@
       },
       "title": {
         "edit": {
-          "label": "title",
+          "label": "Title",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -36,7 +36,7 @@
       },
       "href": {
         "edit": {
-          "label": "href",
+          "label": "URL",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -50,8 +50,8 @@
       },
       "childRoutes": {
         "edit": {
-          "label": "childRoutes",
-          "description": "",
+          "label": "Sub-Routes",
+          "description": "Child paths to include `active` state in the nav.",
           "placeholder": "",
           "visible": true,
           "editable": true
