--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##skills.skill.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##skills.skill.json
@@ -1,7 +1,6 @@
 {
   "key": "plugin_content_manager_configuration_components::skills.skill",
   "value": {
-    "uid": "skills.skill",
     "settings": {
       "bulkable": true,
       "filterable": true,
@@ -35,20 +34,6 @@
           "sortable": true
         }
       },
-      "summary": {
-        "edit": {
-          "label": "Summary",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "summary",
-          "searchable": true,
-          "sortable": true
-        }
-      },
       "percentage": {
         "edit": {
           "label": "Percentage",
@@ -62,14 +47,28 @@
           "searchable": true,
           "sortable": true
         }
+      },
+      "summary": {
+        "edit": {
+          "label": "Summary",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "summary",
+          "searchable": true,
+          "sortable": true
+        }
       }
     },
     "layouts": {
       "list": [
         "id",
         "skill",
-        "summary",
-        "percentage"
+        "percentage",
+        "summary"
       ],
       "edit": [
         [
@@ -90,6 +89,7 @@
         ]
       ]
     },
+    "uid": "skills.skill",
     "isComponent": true
   },
   "type": "object",
