--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##classifications-page.classifications-page.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##classifications-page.classifications-page.json
@@ -22,7 +22,7 @@
       },
       "content": {
         "edit": {
-          "label": "content",
+          "label": "Content",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -94,12 +94,6 @@
       }
     },
     "layouts": {
-      "list": [
-        "id",
-        "content",
-        "createdAt",
-        "updatedAt"
-      ],
       "edit": [
         [
           {
@@ -107,6 +101,12 @@
             "size": 12
           }
         ]
+      ],
+      "list": [
+        "id",
+        "content",
+        "createdAt",
+        "updatedAt"
       ]
     }
   },
