--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##skill.skill.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##skill.skill.json
@@ -22,7 +22,7 @@
       },
       "name": {
         "edit": {
-          "label": "name",
+          "label": "Name",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -36,7 +36,7 @@
       },
       "slug": {
         "edit": {
-          "label": "slug",
+          "label": "Slug",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -50,7 +50,7 @@
       },
       "proficiency": {
         "edit": {
-          "label": "proficiency",
+          "label": "Proficiency",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -64,7 +64,7 @@
       },
       "classifications": {
         "edit": {
-          "label": "classifications",
+          "label": "Classifications",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -79,7 +79,7 @@
       },
       "summary": {
         "edit": {
-          "label": "summary",
+          "label": "Summary",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -93,7 +93,7 @@
       },
       "projects": {
         "edit": {
-          "label": "projects",
+          "label": "Projects",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -108,7 +108,7 @@
       },
       "organizations": {
         "edit": {
-          "label": "organizations",
+          "label": "Organizations",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -123,7 +123,7 @@
       },
       "certifications": {
         "edit": {
-          "label": "certifications",
+          "label": "Certifications",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -138,7 +138,7 @@
       },
       "industries": {
         "edit": {
-          "label": "industries",
+          "label": "Industries",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -153,7 +153,7 @@
       },
       "body": {
         "edit": {
-          "label": "body",
+          "label": "Body",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -167,7 +167,7 @@
       },
       "seo": {
         "edit": {
-          "label": "seo",
+          "label": "SEO",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -181,7 +181,7 @@
       },
       "experiences": {
         "edit": {
-          "label": "experiences",
+          "label": "Experiences",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -192,6 +192,34 @@
           "label": "experiences",
           "searchable": false,
           "sortable": false
+        }
+      },
+      "graphColor": {
+        "edit": {
+          "label": "Graph Color",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "graphColor",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "iconColor": {
+        "edit": {
+          "label": "Icon Color",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "iconColor",
+          "searchable": true,
+          "sortable": true
         }
       },
       "createdAt": {
@@ -272,7 +300,15 @@
         [
           {
             "name": "summary",
-            "size": 6
+            "size": 4
+          },
+          {
+            "name": "graphColor",
+            "size": 4
+          },
+          {
+            "name": "iconColor",
+            "size": 4
           }
         ],
         [
