--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##cv.achievements.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##cv.achievements.json
@@ -1,13 +1,13 @@
 {
-  "key": "plugin_content_manager_configuration_components::cv.ambitions",
+  "key": "plugin_content_manager_configuration_components::cv.achievements",
   "value": {
     "settings": {
       "bulkable": true,
       "filterable": true,
       "searchable": true,
       "pageSize": 10,
-      "mainField": "description",
-      "defaultSortBy": "description",
+      "mainField": "title",
+      "defaultSortBy": "title",
       "defaultSortOrder": "ASC"
     },
     "metadatas": {
@@ -19,30 +19,30 @@
           "sortable": false
         }
       },
-      "description": {
+      "title": {
         "edit": {
-          "label": "description",
+          "label": "Title",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "description",
+          "label": "title",
           "searchable": true,
           "sortable": true
         }
       },
-      "summary": {
+      "description": {
         "edit": {
-          "label": "summary",
+          "label": "Description",
           "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
         },
         "list": {
-          "label": "summary",
+          "label": "description",
           "searchable": true,
           "sortable": true
         }
@@ -51,8 +51,8 @@
     "layouts": {
       "list": [
         "id",
-        "description",
-        "summary"
+        "title",
+        "description"
       ],
       "edit": [
         [
@@ -61,13 +61,13 @@
             "size": 6
           },
           {
-            "name": "summary",
+            "name": "title",
             "size": 6
           }
         ]
       ]
     },
-    "uid": "cv.ambitions",
+    "uid": "cv.achievements",
     "isComponent": true
   },
   "type": "object",
