--- a/.github/actions/install-cache-deps/action.yml
+++ b/.github/actions/install-cache-deps/action.yml
@@ -5,32 +5,61 @@ author: dgrebb
 inputs:
   WORKSPACE_ROOT:
     description: Working Directory
+  BROWSER_BINARIES:
+    description: If the workflow needs BackstopJS testing, install and cache browser binaries.
+    default: "false"
 
 runs:
   using: composite
   steps:
-    - name: ⚄ Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 8
+    # - name: ⚄ Setup pnpm
+    #   uses: pnpm/action-setup@v2
+    #   with:
+    #     version: 8
 
-    - name: ⬢ Setup Node & pnpm Cache
+    # - name: ⬢ Setup Node & pnpm Cache
+    #   uses: actions/setup-node@v4
+    #   with:
+    #     node-version: ${{ env.NODE_VERSION }}
+    #     cache: pnpm
+    #     cache-dependency-path: |
+    #       ${{ inputs.WORKSPACE_ROOT }}/package.json
+    #       ${{ inputs.WORKSPACE_ROOT }}/pnpm-lock.yaml
+    #       ${{ inputs.WORKSPACE_ROOT }}/node_modules
+
+    - name: Install Node.js
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: pnpm
-        cache-dependency-path: |
-          ${{ inputs.WORKSPACE_ROOT }}/package.json
-          ${{ inputs.WORKSPACE_ROOT }}/pnpm-lock.yaml
-          ${{ inputs.WORKSPACE_ROOT }}/node_modules
+
+    - uses: pnpm/action-setup@v2
+      name: Install pnpm
+      with:
+        version: 8
+        run_install: false
+
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - uses: actions/cache@v3
+      name: Setup pnpm cache
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
 
     - name: 🎭 Install & Cache Playwright Binaries
+      if: ${{ inputs.BROWSER_BINARIES }}
       shell: bash
       working-directory: ${{ inputs.WORKSPACE_ROOT }}
       id: playwright-version
       run: echo 'PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.dependencies.playwright' || 'latest')' >> $GITHUB_ENV
 
     - uses: actions/cache@v3
+      if: ${{ inputs.BROWSER_BINARIES }}
       id: playwright-cache
       with:
         path: |
@@ -38,12 +67,12 @@ runs:
         key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
 
     - shell: bash
-      if: steps.playwright-cache.outputs.cache-hit != 'true'
+      if: ${{ inputs.BROWSER_BINARIES && steps.playwright-cache.outputs.cache-hit != 'true' }}
       working-directory: ${{ inputs.WORKSPACE_ROOT }}
       run: npx playwright install --with-deps
 
     - shell: bash
-      if: steps.playwright-cache.outputs.cache-hit != 'true'
+      if: ${{ inputs.BROWSER_BINARIES && steps.playwright-cache.outputs.cache-hit != 'true' }}
       working-directory: ${{ inputs.WORKSPACE_ROOT }}
       run: npx playwright install-deps
 
